<resources>
    <string name="app_name">sports++</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modify_password">修改密码</string>
    <string name="log_out">退出登录</string>
    <string name="attention_teams">关注的球队</string>
    <string name="description">description</string>
    <string name="username">username</string>
    <string name="vs">-</string>
    <string name="team_list">球队一览</string>
    <string name="my_game_list">我的比赛</string>
    <string name="create_game">创建比赛</string>
    <string name="schedule">比赛赛程</string>
    <string name="edit_schedule">编辑赛程</string>
    <string name="coach">球队主教练</string>
    <string name="team_info">球队简介</string>
    <string name="enter_year">进入NBA的年份</string>
    <string name="tips">提示：数值越高，表示该球队的该项数据在联盟中战力越强。</string>
    <string name="update_data">更新数据</string>
    <string name="save">保存</string>
    <string name="attention_offline">关注的系列赛</string>
    <string name="create">创建</string>
    <string name="add">添加</string>
    <string name="begin_time">开始时间</string>
    <string name="game_intro">赛事简介</string>
    <string name="add_admin">比赛管理员</string>
    <string name="submit_create">提交创建</string>
    <string name="admin_game">管理的系列赛</string>
</resources>
