<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity"
    android:orientation="vertical">

   <LinearLayout
       android:layout_marginTop="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
      <TextView
          android:layout_marginLeft="10dp"
          android:layout_marginStart="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/colorPureBlack"
          android:text="@string/coach"/>
      <TextView
          android:id="@+id/team_coach_name"
          android:layout_marginLeft="47dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:layout_marginStart="47dp" />
      </LinearLayout>

      <LinearLayout
          android:layout_marginTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
         <TextView
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPureBlack"
             android:text="@string/enter_year"
             android:layout_marginStart="10dp" />
         <TextView
             android:id="@+id/enter_year"
             android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:layout_marginStart="20dp" />
      </LinearLayout>

      <TextView
          android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/team_info"
          android:textColor="@color/colorPureBlack"
          android:layout_marginStart="10dp" />

      <TextView
          android:id="@+id/team_info_content"
          android:layout_marginTop="5dp"
          android:textSize="14sp"
          android:layout_marginLeft="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp" />

   </LinearLayout>
   <TextView
       android:layout_marginLeft="10dp"
       android:layout_marginTop="10dp"
       android:layout_width="match_parent"
       android:layout_height="20dp"
       android:textSize="12sp"
       android:text="@string/tips"
       android:layout_marginStart="10dp" />
   <lecho.lib.hellocharts.view.ColumnChartView
       android:id="@+id/chart"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>

</LinearLayout>
